--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <section class="ebooks">
       <div class="ebook" data-aos="fade-up" data-aos-delay="150">
         <a href="#" target="_blank">
-          <img src="/assets/html.png" alt="Curso de HTML">
+          <img src="assets/html.png" alt="Curso de HTML">
         </a>
         <div class="ebook-info">
           <strong>HTML</strong>
@@ -78,7 +78,7 @@
       </div>
 
       <div class="ebook" data-aos="fade-up" data-aos-delay="250">
-        <img src="/assets/css.png" alt="Curso de CSS">
+        <img src="assets/css.png" alt="Curso de CSS">
         <div class="ebook-info">
           <strong>CSS</strong>
           <button>
@@ -88,7 +88,7 @@
       </div>
 
       <div class="ebook" data-aos="fade-up" data-aos-delay="350">
-        <img src="/assets/js.png" alt="Curso de JavaScript">
+        <img src="assets/js.png" alt="Curso de JavaScript">
         <div class="ebook-info">
           <strong>JavaScript</strong>
           <button>
