--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="/assets/icon-uc.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
   <title>Universo Codar</title>
@@ -19,8 +19,8 @@
     <header>
       <nav class="header-content container">
         <div class="header-logo" data-aos="fade-up" data-aos-delay="300">
-          <img data-aos="flip-up" data-aos-delay="300" data-aos-duration="1500" src="assets/logo-ucpb.svg" width="100px"
-            height="50px" alt="Logo do Universo Codar">
+          <img data-aos="flip-up" data-aos-delay="300" data-aos-duration="1500" src="./assets/logo-ucpb.svg"
+            width="100px" height="50px" alt="Logo do Universo Codar">
         </div>
 
         <div data-aos="fade-up">
@@ -43,7 +43,7 @@
   <section class="about">
     <div class="container about-content">
       <div data-aos="zoom-in" data-aos-delay="100">
-        <img src="assets/astro-door.png" alt="Astronauta abrindo a porta do universo da programação">
+        <img src="./assets/astro-door.png" alt="Astronauta abrindo a porta do universo da programação">
       </div>
 
       <div class="abount-description" data-aos="zoom-out-left" data-aos-delay="250">
@@ -65,7 +65,7 @@
     <section class="ebooks">
       <div class="ebook" data-aos="fade-up" data-aos-delay="150">
         <a href="#" target="_blank">
-          <img src="assets/html.png" alt="Curso de HTML">
+          <img src="./assets/html.png" alt="Curso de HTML">
         </a>
         <div class="ebook-info">
           <strong>HTML</strong>
@@ -78,7 +78,7 @@
       </div>
 
       <div class="ebook" data-aos="fade-up" data-aos-delay="250">
-        <img src="assets/css.png" alt="Curso de CSS">
+        <img src="./assets/css.png" alt="Curso de CSS">
         <div class="ebook-info">
           <strong>CSS</strong>
           <button>
@@ -88,7 +88,7 @@
       </div>
 
       <div class="ebook" data-aos="fade-up" data-aos-delay="350">
-        <img src="assets/js.png" alt="Curso de JavaScript">
+        <img src="./assets/js.png" alt="Curso de JavaScript">
         <div class="ebook-info">
           <strong>JavaScript</strong>
           <button>
@@ -124,14 +124,14 @@
     </div>
 
     <div>
-      <img src="assets/logo-ucpb.svg" width="100px" height="50px" alt="Logo do Universo Codar">
+      <img src="./assets/logo-ucpb.svg" width="100px" height="50px" alt="Logo do Universo Codar">
     </div>
 
     <p>Copyright 2023 | Universo Codar - Todos direitos reservados.</p>
 
   </footer>
 
-  <script src="/script.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
