--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <div class="abount-description" data-aos="zoom-out-left" data-aos-delay="250">
         <h2>SOBRE</h2>
-        <p> Olá, sou estudante de Ciência da Computação e decidi criar este projeto com o objetivo de compartilhar
+        <p> Olá, decidi criar este projeto com o objetivo de compartilhar
           conhecimento e fortalecer a comunidade dev, principalmente para quem está começando e se sente perdido. Meu
           foco principal é o Front-end, mas tenho interesse na grande maioria das áreas da tecnologia.</p>
       </div>
@@ -64,12 +64,12 @@
 
     <section class="ebooks">
       <div class="ebook" data-aos="fade-up" data-aos-delay="150">
-        <a href="#" target="_blank">
+        <a href="https://pay.kiwify.com.br/2nXFrjc" target="_blank">
           <img src="./assets/html.png" alt="Curso de HTML">
         </a>
         <div class="ebook-info">
           <strong>HTML</strong>
-          <a href="#" target="_blank">
+          <a href="https://pay.kiwify.com.br/2nXFrjc" target="_blank">
             <button>
               R$ 19,99
             </button>
