--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="ebook-info">
           <strong>CSS</strong>
           <button>
-            R$ 19,99
+            EM BREVE
           </button>
         </div>
       </div>
@@ -92,7 +92,7 @@
         <div class="ebook-info">
           <strong>JavaScript</strong>
           <button>
-            R$ 19,99
+            EM BREVE
           </button>
         </div>
       </div>
