--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="ebook-info">
           <strong>HTML</strong>
           <a href="https://pay.kiwify.com.br/2nXFrjc" target="_blank">
-            <s>De R$ 100,00</s> por
+            <s>R$ 100,00</s> por
             <button>
               R$ 19,99
             </button>
